remade wheel in blazor

--- a/VibeCheck/Components/Pages/Home.razor
+++ b/VibeCheck/Components/Pages/Home.razor
@@ -1,74 +1,4 @@
 ﻿@page "/"
+@using VibeCheck.Components.FeelingWheel
 
-<script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
-        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
-
-<style>
-    body {
-        padding: 0;
-        margin: 0;
-    }
-
-    .ring {
-        width: 100vw;
-        height: 100vh;
-    }
-
-    .slice {
-        position: absolute;
-        width: 100px;
-        height: 100px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: auto;
-        margin-bottom: auto;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        clip-path: polygon(0% 50%, 100% 100%, 100% 0%);
-        text-align: center;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        color: white;
-        text-shadow: 0px 0px 10px black;
-        font-size: 20px;
-        transition: transform 0.2s ease-in-out;
-        user-select: none;
-    }
-</style>
-
-<div class="ring">
-    <div class="slice" style="background-color: #ff595e;">Anger</div>
-    <div class="slice" style="background-color:#ffca3a">Fear</div>
-    <div class="slice" style="background-color: #8ac926;">Sad</div>
-    <div class="slice" style="background-color: #1982c4;">Disgust</div>
-    <div class="slice" style="background-color: #6a4c93;">Happy</div>
-</div>
-
-<script>
-    var slices = $(".slice");
-    var totalSlices = slices.length;
-
-    var padding = 10;
-    var inradius = 150;
-    var sideLength = Math.abs(2 * inradius * Math.tan(deg_to_rad(180 / totalSlices)));
-
-    slices.each(function (index) {
-        var transform = "rotate(" + (index * 360 / totalSlices) + "deg) translate(" + (inradius + padding) / 2 + "px)";
-        $(this).css("width", inradius + "px");
-        $(this).css("height", sideLength + "px");
-        $(this).css("line-height", sideLength + "px");
-        $(this).css("transform", transform + " scale(1.0)");
-        $(this).hover(function () {
-            $(this).css("transform", transform + " scale(1.2)");
-            $(this).css("z-index", "1");
-        }, function () {
-            $(this).css("transform", transform + " scale(1.0)");
-            $(this).css("z-index", "0");
-        });
-    });
-
-    function deg_to_rad(deg) {
-        return deg * Math.PI / 180;
-    }
-</script>
+<FeelingsWheel />
