--- a/VibeCheck/Components/FeelingWheel/FeelingsWheel.razor
+++ b/VibeCheck/Components/FeelingWheel/FeelingsWheel.razor
@@ -10,10 +10,10 @@
     private List<FeelingModel> _feelings = new()
     {
         new("Anger", null),
-        new("Fear", null),
-        new("Sad", null),
-        new("Disgust", null),
         new("Happy", null),
+        new("Disgust", null),
+        new("Sad", null),
+        new("Fear", null),
     };
 
     static double primaryInnerRadius = 25;
@@ -23,10 +23,10 @@
     private Dictionary<string, FeelingTileModel> _tiles = new()
     {
         { "Anger", new FeelingTileModel(Angle.FromRatio(0), Angle.FromRatio(0.3), primaryInnerRadius, primaryOuterRadius, "#ff595e") },
-        { "Fear", new FeelingTileModel(Angle.FromRatio(0.3), Angle.FromRatio(0.5), primaryInnerRadius, primaryOuterRadius, "#ffca3a") },
-        { "Sad", new FeelingTileModel(Angle.FromRatio(0.5), Angle.FromRatio(0.7), primaryInnerRadius, primaryOuterRadius, "#8ac926") },
-        { "Disgust", new FeelingTileModel(Angle.FromRatio(0.7), Angle.FromRatio(0.8), primaryInnerRadius, primaryOuterRadius, "#1982c4") },
-        { "Happy", new FeelingTileModel(Angle.FromRatio(0.8), Angle.FromRatio(1), primaryInnerRadius, primaryOuterRadius, "#6a4c93") },
+        { "Happy", new FeelingTileModel(Angle.FromRatio(0.3), Angle.FromRatio(0.5), primaryInnerRadius, primaryOuterRadius, "#ffca3a") },
+        { "Disgust", new FeelingTileModel(Angle.FromRatio(0.5), Angle.FromRatio(0.7), primaryInnerRadius, primaryOuterRadius, "#8ac926") },
+        { "Sad", new FeelingTileModel(Angle.FromRatio(0.7), Angle.FromRatio(0.8), primaryInnerRadius, primaryOuterRadius, "#1982c4") },
+        { "Fear", new FeelingTileModel(Angle.FromRatio(0.8), Angle.FromRatio(1), primaryInnerRadius, primaryOuterRadius, "#6a4c93") },
     };
 
 }
