--- a/VibeCheck/wwwroot/feelingWheel.css
+++ b/VibeCheck/wwwroot/feelingWheel.css
@@ -15,3 +15,10 @@
 .feeling {
     position: absolute;
 }
+
+svg text{
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
