--- a/VibeCheck/Components/ResultsVisualization.razor
+++ b/VibeCheck/Components/ResultsVisualization.razor
@@ -3,9 +3,9 @@
 @inject HttpClient Http
 
 <div class="feelings-wheel">
-    @foreach (var feeling in _allFeelings)
+    @foreach (var tile in _tiles)
     {
-        <ResultTile Feeling="feeling" Tile="_tiles[feeling]" />
+        <ResultTile Feeling="tile.Key" Tile="tile.Value" />
     }
 </div>
 
@@ -13,40 +13,19 @@
     [Parameter]
     public List<SurveyResponse> Responses { get; set; }
 
-    private List<Feeling> _allFeelings = new();
-    private Dictionary<Feeling, List<Feeling>> _feelingContribution = new();
+    private Dictionary<string, Feeling> _allFeelings = new();
     private Dictionary<Feeling, ResultTile.FeelingTileModel> _tiles = new();
-    private Dictionary<string, string> _colors = new()
-    {
-        { "Anger", "#ff595e" },
-        { "Happy", "#ffca3a" },
-        { "Disgust", "#8ac926" },
-        { "Sad", "#1982c4" },
-        { "Fear","#6a4c93" },
-        { "Frustrated", "#ff595e" },
-        { "Aggressive",  "#ff595e" },
-    };
+
 
     protected override async Task OnInitializedAsync()
     {
         var response = await Http.GetFromJsonAsync<List<Feeling>>($"http://localhost:5183/survey/feelings");
         if (response != null)
         {
-            _allFeelings = response;
-            foreach (var feeling in _allFeelings)
-            {
-                var contributions = new List<Feeling>() { feeling };
-                var currentFeeling = feeling;
-                while (currentFeeling.Parent != null)
-                {
-                    currentFeeling = _allFeelings.Single(f => f.Name == currentFeeling.Parent);
-                    contributions.Add(currentFeeling);
-                }
-                _feelingContribution[feeling] = contributions;
-            }
+            _allFeelings = response.ToDictionary(x => x.Name);
         }
         
-        _tiles = SizeTiles(Responses.Select(x => _allFeelings.Single(y => y.Name == x.Feeling)).ToList());
+        _tiles = SizeTiles(Responses.Select(x => _allFeelings[x.Feeling]).ToList());
     }
 
     private Dictionary<Feeling, ResultTile.FeelingTileModel> SizeTiles(List<Feeling> feelings)
@@ -55,12 +34,27 @@
         
         var totalFeelingCount = feelings.Count;
         var feelingCounts = new Dictionary<Feeling, int>();
-        foreach (var feeling in _allFeelings)
+        foreach (var feeling in _allFeelings.Values)
         {
             feelingCounts[feeling] = 0;
         }
 
-        foreach (Feeling contributingFeeling in feelings.SelectMany(feeling => _feelingContribution[feeling]))
+        
+        var feelingContribution = new Dictionary<Feeling, List<Feeling>>();
+        foreach (var feeling in feelings)
+        {
+            var contributions = new List<Feeling>() { feeling };
+            var currentFeeling = feeling;
+            while (currentFeeling.Parent != null)
+            {
+                currentFeeling = _allFeelings[currentFeeling.Parent];
+                contributions.Add(currentFeeling);
+            }
+            feelingContribution[feeling] = contributions;
+        }
+        
+        
+        foreach (Feeling contributingFeeling in feelings.SelectMany(feeling => feelingContribution[feeling]))
         {
             feelingCounts[contributingFeeling]++;
         }
@@ -75,9 +69,9 @@
             var orderFeelings = feelingCounts.Where(x => x.Key.order == i).Select(x => x.Key);
             foreach (var group in orderFeelings.GroupBy(x => x.Parent))
             {
-                
+                var parentFeeling = group.First().Parent;
                 var startAngle = feelingStartingAngle[group.First().Parent];
-                var parentCount = i == 0 ? totalFeelingCount : feelingCounts[_allFeelings.Single(x => x.Name == group.First().Parent)];
+                var parentCount = parentFeeling == null ? totalFeelingCount : feelingCounts[_allFeelings[parentFeeling]];
                 foreach (var feeling in group)
                 {
                     var size = (double)feelingCounts[feeling] / parentCount;
@@ -86,8 +80,7 @@
                         Angle.FromRatio(startAngle), 
                         Angle.FromRatio(startAngle+size), 
                         innerRadius, 
-                        outerRadius, 
-                        _colors[feeling.Name]);
+                        outerRadius);
                     startAngle+=size;
                 }
             }
