--- a/VibeCheck/Components/FeelingsWheel.razor
+++ b/VibeCheck/Components/FeelingsWheel.razor
@@ -5,9 +5,9 @@
 @inject HttpClient Http
 
 <div class="feelings-wheel">
-    @foreach (var feeling in _feelings)
+    @foreach (var tile in _tiles)
     {
-        <EmotionTile Feeling="feeling" Tile="_tiles[feeling.Name]" OnClick="() => OnFeelingSelected(feeling.Name)" />
+        <EmotionTile Feeling="tile.Key" Tile="tile.Value" OnClick="() => OnFeelingSelected(tile.Key.Name)" />
     }
 </div>
 
@@ -15,30 +15,22 @@
     [Parameter]
     public EventCallback<string> onFeelingSelected { get; set; }
 
-    private List<Feeling> _feelings = new();
+    private Dictionary<(string, int), Feeling> _allFeelings = new();
 
     static double radius1 = 25;
     static double radius2 = 100;
     static double radius3 = 200;
     static double radius4 = 300;
 
-    private Dictionary<string, EmotionTile.FeelingTileModel> _tiles = new()
-    {
-        { "Anger", new EmotionTile.FeelingTileModel(Angle.FromRatio(0), Angle.FromRatio(0.3), radius1, radius2, "#ff595e") },
-        { "Happy", new EmotionTile.FeelingTileModel(Angle.FromRatio(0.3), Angle.FromRatio(0.5), radius1, radius2, "#ffca3a") },
-        { "Disgust", new EmotionTile.FeelingTileModel(Angle.FromRatio(0.5), Angle.FromRatio(0.7), radius1, radius2, "#8ac926") },
-        { "Sad", new EmotionTile.FeelingTileModel(Angle.FromRatio(0.7), Angle.FromRatio(0.8), radius1, radius2, "#1982c4") },
-        { "Fear", new EmotionTile.FeelingTileModel(Angle.FromRatio(0.8), Angle.FromRatio(1), radius1, radius2, "#6a4c93") },
-        { "Frustrated", new EmotionTile.FeelingTileModel(Angle.FromRatio(0), Angle.FromRatio(0.15), radius2, radius3, "#ff595e") },
-        { "Aggressive", new EmotionTile.FeelingTileModel(Angle.FromRatio(0.15), Angle.FromRatio(0.3), radius2, radius3, "#ff595e") },
-    };
+    private Dictionary<Feeling, EmotionTile.FeelingTileModel> _tiles = new();
 
     protected override async Task OnInitializedAsync()
     {
         var response = await Http.GetFromJsonAsync<List<Feeling>>($"http://localhost:5183/survey/feelings");
         if (response != null)
         {
-            _feelings = response;
+            _allFeelings = response.ToDictionary(x => (x.Name, x.order));
+            _tiles = SizeTiles();
         }
     }
 
@@ -48,5 +40,62 @@
         {
             await onFeelingSelected.InvokeAsync(feeling);
         }
+    }
+    
+    private Dictionary<Feeling, EmotionTile.FeelingTileModel> SizeTiles()
+    {
+        var result = new Dictionary<Feeling, EmotionTile.FeelingTileModel>();
+        
+        var totalFeelingCount = _allFeelings.Count;
+        var feelingCounts = new Dictionary<Feeling, int>();
+        foreach (var feeling in _allFeelings.Values)
+        {
+            feelingCounts[feeling] = 0;
+        }
+
+        
+        foreach (var feeling in _allFeelings.Values)
+        {
+            var currentFeeling = feeling;
+            do
+            {
+                feelingCounts[currentFeeling]++;
+                currentFeeling = currentFeeling.Parent == null ? null : _allFeelings[(currentFeeling.Parent, currentFeeling.order -1)];
+            } while (currentFeeling is not null);
+        }
+        
+        var feelingStartingAngle = new Dictionary<string, double>();
+        var feelingMaxSize = new Dictionary<string, double>();
+        var innerRadius = 25;
+        var outerRadius = 100;
+        for (var i = 0; i < 3; i++)
+        {
+
+            var orderFeelings = feelingCounts.Where(x => x.Key.order == i).Select(x => x.Key);
+            foreach (var group in orderFeelings.GroupBy(x => x.Parent))
+            {
+                var parentFeeling = group.First().Parent;
+                var startAngle = parentFeeling == null ? 0 :feelingStartingAngle[parentFeeling];
+                var maxSize = parentFeeling == null ? 1 :feelingMaxSize[parentFeeling];
+                var parentCount = parentFeeling == null ? totalFeelingCount : feelingCounts[_allFeelings[(parentFeeling, i-1)]];
+                foreach (var feeling in group)
+                {
+                    var size = ((double)feelingCounts[feeling] / parentCount) * maxSize;
+                    feelingStartingAngle[feeling.Name] = startAngle;
+                    feelingMaxSize[feeling.Name] = size;
+                    result[feeling] = new EmotionTile.FeelingTileModel(
+                        Angle.FromRatio(startAngle), 
+                        Angle.FromRatio(startAngle+size), 
+                        innerRadius, 
+                        outerRadius);
+                    startAngle+=size;
+                }
+            }
+
+            innerRadius = outerRadius;
+            outerRadius += 100;
+        }
+
+        return result;
     }
 }
